Update guide for Next.js 11 (#879)
Add "or newer" to the line mentioning the latest Next.js instructions

--- a/src/pages/docs/guides/nextjs.mdx
+++ b/src/pages/docs/guides/nextjs.mdx
@@ -17,7 +17,7 @@ This will automatically configure your Tailwind setup based on the official Next
 
 ```preval setup
 version:
-  Next.js v10: latest
+  Next.js v10 or newer: latest
   Next.js v9 or older: compat-7
 ```
 
