Changed @vitejs/app to vite as per the latest changes (#897)

--- a/src/pages/docs/guides/vue-3-vite.mdx
+++ b/src/pages/docs/guides/vue-3-vite.mdx
@@ -6,7 +6,7 @@ tool: Vue 3 and Vite
 
 ```preval installation
 tool: Vite
-script: npm init @vitejs/app
+script: npm init vite
 npmInstall: true
 ```
 
