Extend limitations for space utils about divide (#891)
* Extend limitations for space utils about divide

It is not possible to use `space-*` and `divide-*` together in a sensible ways which is a limitation that is well fitted to be part of the docs.

Ping https://github.com/tailwindlabs/tailwindcss/discussions/2466

* Fix Typo

https://github.com/tailwindlabs/tailwindcss.com/pull/891/files#r666324147

* Slight copy tweaks to space.mdx

Co-authored-by: Simon Vrachliotis <simon@simonswiss.com>

--- a/src/pages/docs/space.mdx
+++ b/src/pages/docs/space.mdx
@@ -100,6 +100,10 @@ For those situations, it's better to use the [gap utilities](https://tailwindcss
 </div>
 ```
 
+### Cannot be paired with divide utilities
+
+The `space-*` utilities are not designed to work together with the [divide utilities](https://tailwindcss.com/docs/divide-width). For those situations, consider adding margin/padding utilities to the children instead.
+
 ---
 
 ## Responsive
