Corrected purge extractor override example (#905)

--- a/src/pages/docs/optimizing-for-production.mdx
+++ b/src/pages/docs/optimizing-for-production.mdx
@@ -197,7 +197,7 @@ module.exports = {
     content: ['./src/**/*.{html,md}'],
     extract: {
       md: (content) => {
-        return /[^<>"'`\s]*/.match(content)
+        return content.match(/[^<>"'`\s]*/)
       }
     }
   },
