Update just-in-time-mode.mdx (#937)
* Update just-in-time-mode.mdx

Use TAILWIND_MODE on Windows, little headache.

* Update just-in-time-mode.mdx

* Update just-in-time-mode.mdx

* Update just-in-time-mode.mdx

Co-authored-by: Adam Wathan <adam.wathan@gmail.com>

--- a/src/pages/docs/just-in-time-mode.mdx
+++ b/src/pages/docs/just-in-time-mode.mdx
@@ -513,6 +513,8 @@ For example, if you are using `postcss-cli`, set `TAILWIND_MODE=watch` in your d
 }
 ```
 
+_If you're using Windows, we recommend [cross-env](https://www.npmjs.com/package/cross-env) for setting environment variables in your scripts._
+
 Note that setting `TAILWIND_MODE=watch` will start a long-running watch process in the background, so if you set that environment variable when trying to do a one-off build, it will look like the build is hanging. You should only set `TAILWIND_MODE=watch` when you are actually running a dev server/watch process.
 
 ### Styles rebuild in an infinite loop
