Fix a couple typos in docs (#957)
* Fix `backdrop-hue-rotate` docs

* Update hue-rotate.mdx

* Remove usage of nonexistent saturate class from docs

* Update backdrop-hue-rotate.mdx

Co-authored-by: Adam Wathan <adam.wathan@gmail.com>

--- a/src/pages/docs/backdrop-hue-rotate.mdx
+++ b/src/pages/docs/backdrop-hue-rotate.mdx
@@ -29,7 +29,7 @@ export const classes = {
 
 ## Usage
 
-Use the `backdrop-hue-rotate-{amount}` utilities alongside the `backdrop-filter` utility to blur an element.
+Use the `backdrop-hue-rotate-{amount}` utilities alongside the `backdrop-filter` utility to rotate the hue of an element's backdrop.
 
 ```html
 <div class="backdrop-filter backdrop-hue-rotate-15 ...">
