--- a/src/pages/docs/hover-focus-and-other-states.mdx
+++ b/src/pages/docs/hover-focus-and-other-states.mdx
@@ -228,7 +228,7 @@ module.exports = {
 
 ## Focus-within
 
-Add the `focus-within:` prefix to only apply a utility when a child element has focus.
+Add the `focus-within:` prefix to only apply a utility when that element or any of its descendants have focus.
 
 ```html purple
 <template preview>
