Add link to layer doc (#964)
on Optimizing for production page

--- a/src/pages/docs/optimizing-for-production.mdx
+++ b/src/pages/docs/optimizing-for-production.mdx
@@ -231,7 +231,7 @@ We generally do not recommend this and believe that the risks outweigh the benef
 
 ### Purging specific layers
 
-By default, Tailwind will purge all styles in the `base`, `components`, and `utilities` layers. If you'd like to change this, use the `layers` option to manually specify the layers you'd like to purge:
+By default, Tailwind will purge all styles in the `base`, `components`, and `utilities` [layers](/docs/functions-and-directives#layer). If you'd like to change this, use the `layers` option to manually specify the layers you'd like to purge:
 
 ```js
 // tailwind.config.js
