Fix broken link

--- a/src/pages/blog/tailwindcss-v3/index.mdx
+++ b/src/pages/blog/tailwindcss-v3/index.mdx
@@ -60,7 +60,7 @@ Tailwind CSS v3.0 is a new major version of the framework and there are some min
 
 For example, [Tailwind UI](https://tailwindui.com) is probably the biggest Tailwind project on earth and every template is totally compatible with both v2 and v3 with no changes required.
 
-For more details and step-by-step instructions on migrating to v3.0, check out the [upgrade guide](#).
+For more details and step-by-step instructions on migrating to v3.0, check out the [upgrade guide](/docs/upgrade-guide).
 
 ---
 
