fix typo in user-select `aut` -> `auto`

--- a/src/pages/docs/user-select.mdx
+++ b/src/pages/docs/user-select.mdx
@@ -66,7 +66,7 @@ Use `select-all` to automatically select all the text in an element when a user 
 </div>
 ```
 
-### Using aut select behaviour
+### Using auto select behaviour
 
 Use `select-auto` to use the default browser behavior for selecting text. Useful for undoing other classes like `.select-none` at different breakpoints.
 
