Fix typo in directive (#1008)

--- a/src/pages/docs/upgrade-guide.mdx
+++ b/src/pages/docs/upgrade-guide.mdx
@@ -128,7 +128,7 @@ In Tailwind CSS v3.0, every variant is automatically available for every utility
 
 ### Replace @variants with @layer
 
-Since all variants are now enabled by default, you no longer need to explicity enable these for custom CSS using the `@variants` or `@repsonsive` directives.
+Since all variants are now enabled by default, you no longer need to explicity enable these for custom CSS using the `@variants` or `@responsive` directives.
 
 Instead, add any custom CSS to appropriate "layer" using the `@layer` directive:
 
